image on mobile width fixed

--- a/style/style.css
+++ b/style/style.css
@@ -580,6 +580,10 @@ footer li {
         padding: 0 !important;
     }
 
+    #portfolio .project-image {
+        flex: 0 0 90% !important;
+    }
+
     .project-image img {
         width: 90vw !important;
         border-radius: 0;
